Added class to navber list

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
   <body>
     <nav class="main-navbar">
-      <ul>
-        <li>
-          <a href="cards.html">cards</a>
+      <ul class="navbar__list">
+        <li class="navbar__item">
+          <a href="cards.html" class="navbar__link">cards</a>
         </li>
-        <li>
-          <a href="tiles.html">tiles</a>
+        <li class="navbar__item">
+          <a href="tiles.html" class="navbar__link">tiles</a>
         </li>
-        <li>
-          <a href="index.html">hero</a>
+        <li class="navbar__item">
+          <a href="index.html" class="navbar__link">hero</a>
         </li>
-        <li>
-          <a href="layout.html">layout</a>
+        <li class="navbar__item">
+          <a href="layout.html" class="navbar__link">layout</a>
         </li>
       </ul>
     </nav>
