Added hero site and links to other site in html

--- a/hero.html
+++ b/hero.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid mini project</title>
+    <title>Hero Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&display=swap" rel="stylesheet">
@@ -18,23 +18,15 @@
   </head>
 
   <body>
-    <nav class="main-navbar">
-      <ul class="navbar__list">
-        <li class="navbar__item">
-          <a href="cards.html" class="navbar__link">cards</a>
-        </li>
-        <li class="navbar__item">
-          <a href="tiles.html" class="navbar__link">tiles</a>
-        </li>
-        <li class="navbar__item">
-          <a href="hero.html" class="navbar__link">hero</a>
-        </li>
-        <li class="navbar__item">
-          <a href="layout.html" class="navbar__link">layout</a>
-        </li>
-      </ul>
-    </nav>
-    <!-- <a href="#index.html" class="btn">back to home</a> -->
+    <header class="hero-header">
+      <div class="hero-banner">
+        <h1>welcome to grid</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Quo dignissimos laudantium doloribus saepe deserunt modi!
+        </p>
+      </div>
+    </header>
+    <a href="index.html" class="btn">back to home</a>
   </body>
 
 </html>
