--- a/hero.html
+++ b/hero.html
@@ -13,15 +13,15 @@
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="./style/navbar.css">
+    <link rel="stylesheet" href="./style/hero.css">
     <script src="./script.js"></script>
   </head>
 
   <body>
     <header class="hero-header">
       <div class="hero-banner">
-        <h1>welcome to grid</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <h1 class="title">welcome to grid</h1>
+        <p class="hero-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Quo dignissimos laudantium doloribus saepe deserunt modi!
         </p>
       </div>
