moved to pages folder and changed path

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <nav class="main-navbar">
       <ul class="navbar__list">
         <li class="navbar__item">
-          <a href="cards.html" class="navbar__link">cards</a>
+          <a href="./pages/cards.html" class="navbar__link">cards</a>
         </li>
         <li class="navbar__item">
-          <a href="tiles.html" class="navbar__link">tiles</a>
+          <a href="./pages/tiles.html" class="navbar__link">tiles</a>
         </li>
         <li class="navbar__item">
-          <a href="hero.html" class="navbar__link">hero</a>
+          <a href="./pages/hero.html" class="navbar__link">hero</a>
         </li>
         <li class="navbar__item">
-          <a href="layout.html" class="navbar__link">layout</a>
+          <a href="./pages/layout.html" class="navbar__link">layout</a>
         </li>
       </ul>
     </nav>
